fix: запуск/отладка из VS Code (breakpoints не работали)
launch.json указывал mainClass ru.filive.MainForm, который сам наследует
javafx.application.Application — JDK-лаунчер отказывается запускать такой
класс напрямую без module-path (падает с "JavaFX runtime components are
missing"), как и в fat-jar до появления ru.filive.Launcher. Переключено на
Launcher — тот же приём, что уже используется для сборки exe/jar.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>